[package]
name = "isocountry"
version = "0.2.0"
authors = ["Brett <brett.russell@centro.net>"]
description = "ISO 3166-1 enumeration for Rust"
documentation = "http://docs.rs/isocountry"
homepage = "https://github.com/sifton/isocountry-rs"
license = "MIT"
keywords = ["iso3166", "iso3166-1", "country", "countrycode", "region"]
readme = "Readme.md"
repository = "https://github.com/sifton/isocountry-rs.git"

[dependencies]
failure = "0.1.1"
serde = "1"
